<resources>
    <string name="app_name">Concert Ticket Shop</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="user_name">Username</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="cancel">Cancel</string>
    <string name="email_address">E-mail address</string>
    <string name="loginGuest">Log in as guest</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="ticketName">Ticket name</string>
    <string name="ticketDetail">Ticket Detail</string>
    <string name="concertDate">Date</string>
    <string name="cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="view">View</string>
    <string name="delete_from_cart">Delete from cart</string>
    <string name="go_back">Go back</string>
    <string name="amount">Amount</string>
    <string name="amountcount">amountcount</string>

</resources>