<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ticketImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/ticketTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ticketImage"
            android:padding="8dp"
            android:text="@string/ticketName"
            android:textColor="?android:textColorSecondary"
            android:layout_centerHorizontal="true"/>


        <TextView
            android:id="@+id/ticketDetail"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ticketTitle"
            android:padding="8dp"
            android:text="@string/ticketDetail" />

        <TextView
            android:id="@+id/concertDate"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ticketDetail"
            android:padding="8dp"
            android:text="@string/concertDate"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/price"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/concertDate"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:textColor="@color/red"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price"
            android:text="@string/add_to_cart"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>